added middleware , me route

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI = mongodb+srv://mainak:mainak@first-db.yvgynex.mongodb.net/
+MONGO_URI = mongodb+srv://admin:admin@next-auth-db.se4w1gy.mongodb.net/
 TOKEN_SECRET = nextjsyoutube
 DOMAIN = http://localhost:3000
